# voice-transcriber

./: .dockerignore  .gitattributes  .gitignore  .redocly.yaml  CHANGELOG.md  Makefile  README.md  main_prompt.txt  main_prompt_asr_pipeline.txt  main_prompt_backend.txt  main_prompt_browser_extension.txt  main_prompt_docker.txt  main_prompt_webui.txt  openapi.yaml
.github/workflows/: release-artifacts.yml  server-deps.yml
admin-webui/: index.html  package-lock.json  package.json  vite.config.ts
admin-webui/src/: App.tsx  vite-env.d.ts
browser-extension/: README.md  manifest.json  offscreen.html  package-lock.json  package.json  popup.html  sidepanel.html  tsconfig.json  upload.html  vite.config.ts
browser-extension/src/: background.ts  (+2 more)
cli/: README.md  pyproject.toml
cli/src/voice_transcriber_cli/: __init__.py  api.py  dummy_audio.py  main.py  poll.py  tokens.py
cli/src/voice_transcriber_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configs/: asr.yaml  diarization.yaml  embeddings.yaml  limits.yaml  llm.yaml  server.yaml
docker/: Dockerfile.admin-webui  Dockerfile.api  Dockerfile.diarization  Dockerfile.ml-base  Dockerfile.webui  Dockerfile.worker  Dockerfile.worker.gpu  README.md  compose.api-gpu.override.yml  diarization_strip_torch_cuda.py  docker-compose.yml
docs/: ADMIN_OPS_CONSOLE.md  ADMIN_OPS_ROADMAP.md  ADMIN_OPS_SPRINT2_CHECKLIST.md  ADMIN_OPS_SPRINT3_CHECKLIST.md  ADMIN_OPS_SPRINT4_CHECKLIST.md  ADMIN_OPS_SPRINT5_CHECKLIST.md  ADMIN_OPS_SPRINT6_CHECKLIST.md  ADMIN_OPS_SPRINT7_CHECKLIST.md  ADMIN_OPS_SPRINT8_CHECKLIST.md  ADMIN_OPS_SPRINT9_CHECKLIST.md  ASR_PROVIDER_IMPLEMENTATION.md  AUTH_AND_IDENTITY.md  BROWSER_EXTENSION_UI.md  DEPENDENCIES.md  DEPENDENCIES_MIGRATION.md  DIARIZATION_ALIGNMENT_VERSIONING.md  GIGAAM_ASR.md  MODEL_CONFIGURATION.md  OFFLINE_AND_HUGGINGFACE.md  OPENAPI.md  PHASE_A_ACCEPTANCE.md  PHASE_B_ACCEPTANCE.md  PHASE_C_ACCEPTANCE.md  README.md  REALTIME_FAST_FINAL_V2.md  RELEASE_BUILD_AND_DEPLOY.md  ROADMAP.md  SPEAKER_IDENTIFICATION.md  SPEAKER_IDENTIFICATION_ACCEPTANCE.md  TECHNICAL_SPECIFICATION.md  TESTING.md  VERSIONING.md  WEBSOCKET.md  Памятка по сборке и развертыванию.md
scripts/: audio_acceptance_report.py  issue_api_key.py  phase_a_upload_smoke.py  sync-version.ps1  sync-version.sh
server/: .gitignore  README.md  alembic.ini  pyproject.toml  run.py  worker.py
server/admin_api/: __init__.py  audit.py  audit_dedupe.py  audit_read.py  celery_bridge.py  celery_monitor.py  conversations_read.py  dependencies.py  main.py  meta_sanitize.py  pipeline_actions.py  pipeline_events_read.py  pipeline_settings.py
server/admin_api/routers/: v1.py
server/alembic/: env.py
server/alembic/versions/: 0004_transcript_versioning_active_pointer.py  20260418_initial_schema.py  20260418_phase_a_user_prefs_export.py  20260418_stage0_conversation_chain.py  20260419_phase_audio_object_ext.py  20260421_conversation_audio_uploaded_at.py  20260430_auth_refresh_sessions_c72.py  20260430_user_oauth_identities_c7.py  20260501_user_api_keys.py  20260502_recording_session_summaries.py  20260512_admin_memberships.py  20260513_admin_audit_events.py  20260514_auth_signin_events_sprint6.py  20260514_pipeline_events_asr_chunks_sprint8.py  20260630_speaker_labels.py
server/app/: __init__.py  main.py  models.py
server/app/api/: __init__.py  auth.py  conversations.py  dependencies.py  realtime_finalize.py  routes.py  search.py  settings.py  speakers.py  upload.py  websocket.py  ws_auth.py  ws_finalize_store.py  ws_hub.py  ws_hub_redis.py  ws_realtime_buffer.py
server/app/asr/: audio_util.py  base.py  factory.py  faster_engine.py  faster_whisper.py  gigaam.py  gigaam_engine.py  vad_prefs.py  vosk.py  whisper.py
server/app/diarization/: __init__.py  factory.py  pyannote_provider.py  warmup.py
server/app/services/: __init__.py  auth_client_meta.py  auth_credential_lockout.py  auth_signin_audit.py  oauth_exchange.py  oauth_user.py  password_policy.py  pipeline_error_classify.py  pipeline_event_write.py  service_refresh_token.py  speaker_display.py  summary_pipeline_events.py
server/core/: __init__.py  asr_chunk.py  asr_tier.py  audio_format.py  config.py  db.py  deployment_compat.py  diarization_prefs.py  embedding_client.py  logging.py  metrics.py  oauth_admin_webui.py  oauth_public.py  oauth_state.py  pcm_audio.py  realtime_merge.py  recording_session_chain.py  s3.py  security.py  speaker_labels.py  user_language.py  webm_pcm.py
server/plugins/: __init__.py  asr_base.py  diarization_base.py  llm_base.py  loader.py  ollama_llm.py  openai_chat_llm.py
server/tests/: conftest.py  sample-1.webm  test_oauth_state.py
server/tests/integration/: test_audio_acceptance_report.py  test_diarization_worker_profile_smoke.py  test_phase_a_upload_export_e2e.py  test_speaker_identification_acceptance.py
server/tests/unit/: test_admin_api_health.py  test_admin_sprint2.py  test_admin_sprint3.py  test_admin_sprint4.py  test_admin_sprint5.py  test_admin_sprint7.py  test_admin_sprint8.py  test_asr_inference_b34.py  test_asr_parallel_finalize.py  test_asr_registry.py  test_asr_tier.py  test_asr_vad_prefs.py  test_auth_credential_lockout.py  test_celery_asr_queues.py  test_conversation_realtime_fields.py  test_deployment_compat.py  test_diarization_prefs.py  test_gigaam_provider.py  test_llm_pipeline_events.py  test_llm_summary_helpers.py  test_oauth_admin_webui.py  test_openai_chat_llm.py  test_password_policy.py  test_pipeline_error_classify.py  test_pyannote_provider.py  test_realtime_fast_persist.py  test_realtime_merge.py  test_recording_session_chain.py  test_speaker_identify_llm.py  test_speaker_labels.py  test_stub_transcript_source.py  test_user_language.py  test_webm_pcm.py  test_ws_auth.py  test_ws_finalize_store.py  test_ws_realtime_buffer.py
server/workers/: __init__.py  celery_app.py  diarization_entrypoint.py  gpu_unified_entrypoint.py
server/workers/tasks/: __init__.py  asr.py  cleanup.py  diarization.py  embeddings.py  llm.py
webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+91 files in other folders)
