[tool.poetry]
name = "voice-transcriber-server"
version = "0.1.0"
description = "Backend server for the voice transcription system"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
cryptography = "^43.0.0"
boto3 = "^1.35.0"
orjson = "^3.10.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
pyyaml = "^6.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

